Fixed cmake, new error with make

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,5 @@
 add_executable(FileSorter
-main/main.cpp,
+main/main.cpp
 main/mainController.cpp)
 
 #include const.h
@@ -8,3 +8,5 @@ add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/record)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/sorter)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/main)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/fileHandler)
+
+target_link_libraries(FileSorter RecordLib)
