--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,3 +10,4 @@ add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/main)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/fileHandler)
 
 target_link_libraries(FileSorter RecordLib)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/const)
