--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,7 +3,7 @@ main/main.cpp
 main/mainController.cpp)
 
 #include const.h
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/constants)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/const)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/record)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/sorter)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/main)
