added file sorting structure

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,11 +4,11 @@ main/mainController.cpp)
 
 #include const.h
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/const)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/main)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/record)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/sorter)
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/main)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/fileHandler)
 
 target_link_libraries(FileSorter RecordLib)
 target_link_libraries(FileSorter FileHandlerLib)
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/const)
+target_link_libraries(FileSorter SorterLib)
