Before big changes, read not working write not working

--- a/src/sorter/CMakeLists.txt
+++ b/src/sorter/CMakeLists.txt
@@ -1,7 +1,8 @@
-include_directories(sortingAlgorithms)
 add_library(SorterLib
- sorter.cpp
- sortingAlgorithms/naturalMergeSort.cpp)
+sorter.cpp
+sortingAlgorithms/naturalMergeSort.cpp)
+include_directories(sortingAlgorithms)
 target_include_directories(SorterLib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}) 
 target_include_directories(SorterLib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR} ../const)
+target_include_directories(SorterLib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR} sortingAlgorithms)
 target_link_libraries(SorterLib FileHandlerLib)
